--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -112,7 +112,7 @@
                 </MenuItem>
             </Menu>
             <Separator DockPanel.Dock="Top" Height="3" Margin="0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}"/>
-            <DockPanel DockPanel.Dock="Top">
+            <DockPanel DockPanel.Dock="Top" Panel.ZIndex="9">
                 <Button x:Name="checkerbtn" Width="32" DockPanel.Dock="Right" Panel.ZIndex="2" Background="Transparent" BorderThickness="0" ToolTip="审核者已经登陆" Visibility="Collapsed">
                     <Image Source="images\admin.png">
                     </Image>
@@ -121,10 +121,25 @@
                     <Image Source="images\disconnected.png">
                     </Image>
                 </Button>
-                <Button x:Name="rs232connectedbtn" Width="32" DockPanel.Dock="Right" Panel.ZIndex="2" Background="Transparent" BorderThickness="0" ToolTip="串口已打开" Visibility="Collapsed" Click="rs232connectedbtn_Click">
-                    <Image Source="images\connected.png">
-                    </Image>
-                </Button>
+                <Canvas x:Name="rs232connectedBorder" Width="32" DockPanel.Dock="Right" Panel.ZIndex="9" Visibility="Collapsed">
+                    <Button x:Name="rs232connectedbtn" Width="32" DockPanel.Dock="Right" Background="Transparent" BorderThickness="0" Click="rs232connectedbtn_Click" MouseEnter="rs232connectedbtn_MouseEnter" MouseLeave="rs232connectedbtn_MouseLeave">
+                        <Image Source="images\connected.png">
+                        </Image>
+                    </Button>
+                    <Canvas x:Name="tipinfocanvas" Canvas.Left="-100" Canvas.Top="50" Width="100" Height="80" Background="LightBlue" Opacity="0.3">
+                        <StackPanel Width="40" Height="80">
+                            <TextBlock>波特率:</TextBlock>
+                            <TextBlock>校验位:</TextBlock>
+                            <TextBlock>停止位:</TextBlock>
+                        </StackPanel>
+                        <StackPanel Width="40" Height="80" Canvas.Left="45">
+                            <TextBlock x:Name="bautratetxt">1</TextBlock>
+                            <TextBlock x:Name="adjusttxt">2</TextBlock>
+                            <TextBlock x:Name="stopbittxt">3</TextBlock>
+                        </StackPanel>
+                    </Canvas>
+                </Canvas>
+                <TextBlock x:Name="comnameblk" DockPanel.Dock="Right" VerticalAlignment="Center" Width="50" TextAlignment="Right" HorizontalAlignment="Right"></TextBlock>
                 <ToolBarTray x:Name="toolBarTray" Height="32" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" DockPanel.Dock="Left">
                     <ToolBarTray.Background>
                         <SolidColorBrush Color="#FFF0F0F0"/>
@@ -168,15 +183,6 @@
                 </ToolBarTray>
             </DockPanel>
             <Separator DockPanel.Dock="Top" Height="3" Margin="0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}"/>
-            <!--
-            <d3:Chart Visibility="Hidden" Name="plotter" DockPanel.Dock="Top" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" Height="200">
-                <d3:Chart.Title>
-                    <TextBlock HorizontalAlignment="Center" FontSize="18" Margin="0,5,0,5">实时波形</TextBlock>
-                </d3:Chart.Title>
-                <d3:LineGraph x:Name="linegraph" Description="Simple linegraph" Stroke="Blue" StrokeThickness="3"/>
-            </d3:Chart>
-            -->
-
             <TabControl x:Name="sampletab" DockPanel.Dock="Top" SelectionChanged="sampletab_SelectionChanged">
                 <TabItem x:Name="newtabitem" Selector.Selected="OnNewTabSelected">
                     <TabItem.Header>
