fix bug:连续测量xaxis过短。 功能完善: 1历史波形隐藏积分 2模拟发送数据不再打开窗口 3当7500点时不再关闭端口

--- a/SilverTest/BasicWaveChart/BasicWaveChartUC.xaml
+++ b/SilverTest/BasicWaveChart/BasicWaveChartUC.xaml
@@ -70,7 +70,7 @@
         <ContextMenu x:Key="wavemenu">
             <MenuItem x:Name="fullshowmenu" Header="全景" Click="fullshowmenu_Click"></MenuItem>
             <MenuItem x:Name="movemenu" Header="移动" Click="movemenu_Click"></MenuItem>
-            <MenuItem x:Name="integralmenu" Header="积分" Click="integralmenu_Click" ></MenuItem>
+            <MenuItem x:Name="integralmenu" Header="积分" Click="integralmenu_Click"  Visibility="Hidden"></MenuItem>
         </ContextMenu>
     </UserControl.Resources>
     <widget:ZoomPanel x:Name="zoompanel"  Ratio="{Binding RatioS, ElementName=ControlContainer}">
