--- a/SilverTest/SilverTest/CommandPanelWnd.xaml
+++ b/SilverTest/SilverTest/CommandPanelWnd.xaml
@@ -11,27 +11,63 @@
         Title="命令面板" Height="500" Width="650" Loaded="Window_Loaded">
     <Grid>
         <Canvas MouseLeftButtonDown="Canvas_MouseLeftButtonDown">
-            <Label Content="获取状态" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45" Canvas.Left="481" Canvas.Top="290" />
-            <Button x:Name="getstatusbtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Canvas.Left="544" Canvas.Top="290" Click="getstatusbtn_Click"/>
-            <StackPanel Canvas.Top="10" Canvas.Left="50" Orientation="Horizontal" Width="150" Height="330">
-                <StackPanel  Width="80" Height="300" Margin="0,0">
-                    <Label Content="采样" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45" />
-                    <Label Content="测量" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45"  />
-                    <Label Content="校准" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45" />
-                    <Label Content="通信" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45" />
-                    <Label Content="连续测量" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45"/>
-                    <Label Content="清洗" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45"/>
-                    <Label Content="返回上一级菜单" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45"/>
+            <StackPanel Margin="150,300" x:Name="parampanel" Panel.ZIndex="10" Visibility="Visible" Background="LightBlue">
+                <StackPanel.Effect>
+                    <DropShadowEffect/>
+                </StackPanel.Effect>
+                <StackPanel Width="300" Height="80" Orientation="Horizontal" >
+                    <StackPanel Width="140">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Width="50" TextAlignment="Right" Margin="0,0,5,0">时间</TextBlock>
+                            <TextBox x:Name="timeParamTxt" Width="50" TextAlignment="Center" TextChanged="timeParamTxt_TextChanged">3</TextBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Width="50" TextAlignment="Right" Margin="0,0,5,0">放大倍数</TextBlock>
+                            <TextBox x:Name="enlargeParamTxt" Width="50" TextAlignment="Center" TextChanged="enlargeParamTxt_TextChanged">1</TextBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Width="50" TextAlignment="Right" Margin="0,0,5,0">高压</TextBlock>
+                            <TextBox x:Name="presureParamTxt" Width="50" TextAlignment="Center" TextChanged="presureParamTxt_TextChanged">500</TextBox>
+                        </StackPanel>
+                    </StackPanel>
+                    <StackPanel Width="140">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Width="50" TextAlignment="Right" Margin="0,0,5,0">流量</TextBlock>
+                            <TextBox  x:Name="fluParamTxt" Width="50" TextAlignment="Center" TextChanged="fluParamTxt_TextChanged">2</TextBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Width="50" TextAlignment="Right" Margin="0,0,5,0">清洗时长</TextBlock>
+                            <TextBox  x:Name="washtimeParamTxt" Width="50" TextAlignment="Center" TextChanged="washtimeParamTxt_TextChanged">2</TextBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Width="50" TextAlignment="Right" Margin="0,0,5,0">实时</TextBlock>
+                            <TextBox x:Name="realtimeParamTxt" Width="50" TextAlignment="Center" TextChanged="realtimeParamTxt_TextChanged">21</TextBox>
+                        </StackPanel>
+                    </StackPanel>
                 </StackPanel>
-                <StackPanel Width="50" Height="300">
-                    <Button x:Name="grabSampleBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="grabSampleBtn_Click"/>
-                    <Button x:Name="starttestBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="starttestBtn_Click"/>
-                    <Button x:Name="verifyBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="verifyBtn_Click"/>
-                    <Button x:Name="communicateBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="communicateBtn_Click"/>
-                    <Button Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5"/>
-                    <Button x:Name="wash" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="wash_Click"/>
-                    <Button x:Name="returnparent" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="returnparent_Click"/>
+                <StackPanel Height="30" Orientation="Horizontal">
+                    <Button x:Name="setparamok" Content="确定" HorizontalAlignment="Right" Margin="200,0,10,0" Click="setparamok_Click"></Button>
+                    <Button x:Name="setparamcancel" Content="取消" HorizontalAlignment="Right" Click="setparamcancel_Click"></Button>
                 </StackPanel>
+            </StackPanel>
+            <Button x:Name="getstatusbtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Canvas.Left="544" Canvas.Top="290" Visibility="Hidden"/>
+            <StackPanel x:Name="buttoncontainerstp" Width="200" Height="300" Margin="50,50,0,0" 
+                        Background="White"
+                        MouseLeftButtonDown="buttoncontainerstp_MouseLeftButtonDown">
+                <Button x:Name="pm1" Content="测量" Height="30" Width="150" HorizontalAlignment="Left" MouseEnter="pm1_MouseEnter" Click="pm1_Click" ></Button>
+                <Button x:Name="m11" Content="取样" Height="30" Width="150" HorizontalAlignment="Left" Background="LightPink" Margin="50,2,0,0"  Visibility="Collapsed" Click="m11_Click"></Button>
+                <Button x:Name="m12" Content="清洗" Height="30" Width="150" HorizontalAlignment="Left" Background="LightPink" Margin="50,2,0,0" Visibility="Collapsed" Click="m12_Click"></Button>
+                <Button x:Name="m13" Content="测量" Height="30" Width="150" HorizontalAlignment="Left" Background="LightPink" Margin="50,2,0,0" Visibility="Collapsed" Click="m13_Click"></Button>
+                <Button x:Name="m14" Content="返回上一级菜单" Height="30" Width="150" HorizontalAlignment="Left" Background="LightPink" Margin="50,2,0,0" Visibility="Collapsed"></Button>
+                <Button x:Name="pm2" Content="连续测量" Height="30" Width="150" HorizontalAlignment="Left"></Button>
+                <Button x:Name="pm3" Content="校准"  Height="30" Width="150" HorizontalAlignment="Left" Click="pm3_Click"></Button>
+                <Button x:Name="pm4" Content="通信"  Height="30" Width="150" HorizontalAlignment="Left" Click="pm4_Click"></Button>
+                <Button x:Name="pm5" Content="液体测量"  Height="30" Width="150" HorizontalAlignment="Left" MouseEnter="pm5_MouseEnter" Click="pm5_Click"/>
+                <Button x:Name="m51" Content="清洗" Height="30" Width="150" HorizontalAlignment="Left" Background="LightPink" Margin="50,2,0,0" Visibility="Collapsed" Click="m51_Click"></Button>
+                <Button x:Name="m52" Content="测量" Height="30" Width="150" HorizontalAlignment="Left" Background="LightPink" Margin="50,2,0,0" Visibility="Collapsed" Click="m52_Click" ></Button>
+                <Button x:Name="m53" Content="返回上一级菜单" Height="30" Width="150" HorizontalAlignment="Left" Background="LightPink" Margin="50,2,0,0" Visibility="Collapsed"></Button>
+                <Button x:Name="pm6" Content="参数设置"  Height="30" Width="150" HorizontalAlignment="Left" Click="pm6_Click"></Button>
+                <Button x:Name="pm7" Content="状态获取"  Height="30" Width="150" HorizontalAlignment="Left" Click="pm7_Click"></Button>
             </StackPanel>
             <Border CornerRadius="5" BorderBrush="Gray" BorderThickness="3" Height="220" Canvas.Left="278" Canvas.Top="56" Width="261"
                    >
@@ -71,41 +107,9 @@
                     </StackPanel>
                 </StackPanel>
             </Border>
-            <GroupBox Header="液体" Height="60" Width="200" Canvas.Left="260" Canvas.Top="281" >
-                <Canvas>
-                    <Label Content="清洗" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45"  />
-                    <Button x:Name="liquidWashBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Click="liquidWashBtn_Click" Canvas.Left="34"/>
-                    <Label Content="测量" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45" Canvas.Left="91"  />
-                    <Button x:Name="liquidTestBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Click="liquidTestBtn_Click" RenderTransformOrigin="-1.097,0.546" Canvas.Left="125"/>
-                </Canvas>
-            </GroupBox>
-            <Separator Height="14" Width="624" Canvas.Left="10" Margin="0" Canvas.Top="340"></Separator>
-            <StackPanel Canvas.Top="374" Canvas.Left="50" Orientation="Horizontal" Width="150" Height="50">
-                <StackPanel  Width="80" Height="50">
-                    <Label Content="参数设置" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Height="45" />
-                </StackPanel>
-                <StackPanel Width="50" Height="50">
-                    <Button x:Name="setParamBtn" Width="40" Height="40" Style="{StaticResource MirrorStyle}" Margin="0,0,0,5" Click="setParamBtn_Click"></Button>
-                </StackPanel>
-            </StackPanel>
-
-
-            <Canvas Width="400" Height="120" Canvas.Left="200" Canvas.Top="345">
-                <Label RenderTransformOrigin="6.353,1.44" Canvas.Left="38" Canvas.Top="15">时间</Label>
-                <TextBox x:Name="timeParamTxt" Height="23" Canvas.Left="95" TextWrapping="Wrap" Text="时间" Canvas.Top="17" Width="80" TextChanged="timeParamTxt_TextChanged"/>
-                <Label Canvas.Left="219" Canvas.Top="17">流量</Label>
-                <TextBox x:Name="fluParamTxt" Height="23" Canvas.Left="278" TextWrapping="Wrap" Text="流量" Canvas.Top="17" Width="80" TextChanged="fluParamTxt_TextChanged"/>
-                <Label Canvas.Left="195" Canvas.Top="55">清洗时长</Label>
-                <TextBox x:Name="washtimeParamTxt" Height="23" Canvas.Left="278" TextWrapping="Wrap" Text="清洗时长" Canvas.Top="55" Width="80" TextChanged="washtimeParamTxt_TextChanged"/>
-                <Label Canvas.Left="38" Canvas.Top="87">高压</Label>
-                <TextBox x:Name="presureParamTxt" Height="23" Canvas.Left="95" TextWrapping="Wrap" Text="高压" Canvas.Top="87" Width="80" RenderTransformOrigin="1.012,0.609" TextChanged="presureParamTxt_TextChanged"/>
-                <Label Canvas.Left="23" Canvas.Top="55">放大倍数</Label>
-                <TextBox x:Name="enlargeParamTxt" Height="23" Canvas.Left="95" TextWrapping="Wrap" Text="放大倍速" Canvas.Top="55" Width="80" TextChanged="enlargeParamTxt_TextChanged"/>
-                <Label Canvas.Left="219" Canvas.Top="87">实时</Label>
-                <TextBox x:Name="realtimeParamTxt" Height="23" Canvas.Left="278" TextWrapping="Wrap" Text="实时" Canvas.Top="87" Width="80" RenderTransformOrigin="-1.45,1.826" TextChanged="realtimeParamTxt_TextChanged"/>
-            </Canvas>
-            <Button x:Name="whidebtn" Content="退出" Height="28" Canvas.Left="589" Canvas.Top="426" Width="37" Click="whidebtn_Click"/>
-
+            <Button x:Name="whidebtn" Content="退出" Height="28" Canvas.Left="512" Canvas.Top="332" Width="37" Click="whidebtn_Click"/>
+            <TextBox x:Name="testbox" Width="70" Canvas.Top="6"></TextBox>
+            <Button x:Name="teststatusbtn" Width="30" Height="20" Canvas.Left="85" Canvas.Top="3" Click="teststatusbtn_Click">test</Button>
         </Canvas>
     </Grid>
 </Window>
