--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -23,6 +23,9 @@
                     <Image Source="images\save.png" />
                 </MenuItem.Icon>
             </MenuItem>
+            <MenuItem x:Name="newitemfullsavePMenu" Header="保存完整数据" Click="newitemfullsavePMenu_Click">
+                
+            </MenuItem>
             <Separator />
         </ContextMenu>
         <ContextMenu x:Key="sampletableMenu">
@@ -35,6 +38,9 @@
                 <MenuItem.Icon>
                     <Image Source="images\save.png" />
                 </MenuItem.Icon>
+            </MenuItem>
+            <MenuItem x:Name="standarditemfullsavePMenu" Header="保存完整数据">
+
             </MenuItem>
             <Separator />
         </ContextMenu>
