--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -39,7 +39,7 @@
                     <Image Source="images\save.png" />
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem x:Name="standarditemfullsavePMenu" Header="保存完整数据">
+            <MenuItem x:Name="standarditemfullsavePMenu" Header="保存完整数据" Click="standarditemfullsavePMenu_Click">
 
             </MenuItem>
             <Separator />
@@ -75,6 +75,7 @@
                     <MenuItem Header="保存" Visibility="Collapsed"></MenuItem>
                     <MenuItem x:Name="savehistory" Header="保存现场" Click="savehistory_Click"></MenuItem>
                     <MenuItem x:Name="loadhistory" Header="载入现场" Click="loadhistory_Click"></MenuItem>
+                    <MenuItem x:Name="loadkeyhistory" Header="载入关键数据" Click="loadkeyhistory_Click"></MenuItem>
                     <MenuItem x:Name="exportexcelmenu" Header="输出到excel" Click="exportexcelmenu_Click"/>
                     <MenuItem Header="汞打印预览测试数据" Visibility="Collapsed"></MenuItem>
                     <MenuItem Header="汞打印测试数据" Visibility="Collapsed"></MenuItem>
