--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -7,10 +7,18 @@
         xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:SilverTest"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:Feature="clr-namespace:BasicWaveChart.Feature.integral;assembly=BasicWaveChart"
         xmlns:System="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="QM201H" Height="850" Width="1000" Loaded="window_Loaded" WindowStartupLocation="CenterScreen">
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"        
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
+        Title="QM201H" Height="850" Width="1000" Loaded="window_Loaded" WindowStartupLocation="CenterScreen" Icon="images/test.png">
     <Window.Resources>
         <ContextMenu x:Key="newtableMenu">
             <MenuItem Header="查看历史" Click="newtablemenu_showhistory">
@@ -24,7 +32,6 @@
                 </MenuItem.Icon>
             </MenuItem>
             <MenuItem x:Name="newitemfullsavePMenu" Header="保存完整数据" Click="newitemfullsavePMenu_Click">
-                
             </MenuItem>
             <Separator />
         </ContextMenu>
@@ -67,8 +74,8 @@
             <DockPanel.Background>
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}"/>
             </DockPanel.Background>
-            <Menu Height="25" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" DockPanel.Dock="Top" MouseLeftButtonDown="Menu_MouseLeftButtonDown">
-                <MenuItem Header="文件">
+            <Menu Height="28" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" DockPanel.Dock="Top" MouseLeftButtonDown="Menu_MouseLeftButtonDown">
+                <MenuItem  Height="28" Header="文件">
                     <MenuItem Header="新建" Visibility="Collapsed"></MenuItem>
                     <MenuItem Header="打开" Visibility="Collapsed"></MenuItem>
                     <MenuItem Header="关闭" Visibility="Collapsed"></MenuItem>
@@ -86,7 +93,7 @@
                     <MenuItem Header="打印样品中砷含量" Visibility="Collapsed"></MenuItem>
                     <MenuItem x:Name="exitMenu" Header="退出" Click="exitMenu_Click"></MenuItem>
                 </MenuItem>
-                <MenuItem Header="计算" Visibility="Collapsed">
+                <MenuItem  Height="28" Header="计算" Visibility="Collapsed">
                     <MenuItem Header="平均值"></MenuItem>
                     <MenuItem Header="相关系数"></MenuItem>
                     <MenuItem Header="汞浓度"></MenuItem>
@@ -94,44 +101,54 @@
                     <MenuItem Header="砷浓度"></MenuItem>
                     <MenuItem Header="样品中砷的含量"></MenuItem>
                 </MenuItem>
-                <MenuItem Header="工具">
+                <MenuItem  Height="28" Header="工具">
                     <MenuItem x:Name="printRmenu" Header="打印相关系数图" Click="printRmenu_Click"></MenuItem>
                     <MenuItem x:Name="modifytestmenu" Header="修改测试数据" Click="modifytestmenu_Click" ></MenuItem>
                     <MenuItem x:Name="setportmenu" Header="设置串口" Click="setportmenu_Click"></MenuItem>
                 </MenuItem>
-                <MenuItem Header="测汞或砷" Visibility="Collapsed">
+                <MenuItem  Height="28" Header="测汞或砷" Visibility="Collapsed">
                     <MenuItem Header="测汞"></MenuItem>
                     <MenuItem Header="测砷"></MenuItem>
                 </MenuItem>
-                <MenuItem Header="气体或液体">
+                <MenuItem  Height="28" Header="气体或液体">
                     <MenuItem x:Name="testliquidMenu" Header="测液体" Click="testliquidMenu_Click"/>
                     <MenuItem x:Name="testairMenu" Header="测气体" Click="testairMenu_Click"/>
                 </MenuItem>
-                <MenuItem Header="帮助"></MenuItem>
-                <MenuItem Header="开发">
+                <MenuItem  Height="28" Header="帮助"></MenuItem>
+                <MenuItem  Height="28" Header="开发">
                     <MenuItem x:Name="saveDotsMenu" Header="保存Dots" Checked="saveDotsMenu_Checked" Click="saveDotsMenu_Click"></MenuItem>
                     <MenuItem x:Name="saveRawTextMenu" Header="保存rawtext" Click="saveRawTextMenu_Click"></MenuItem>
                     <MenuItem x:Name="sendTextMenu" Header="发送模拟数据" Click="sendTextMenu_Click" ></MenuItem>
                 </MenuItem>
-                <MenuItem Header="登陆" Click="MenuItem_Click">
+                <MenuItem  Height="28" Header="登陆" Click="MenuItem_Click">
                     <MenuItem x:Name="checkerlogin" Header="审核者登陆" Click="checkerlogin_Click"/>
                     <MenuItem x:Name="checkerlogout" Header="审核者退出" Click="checkerlogout_Click"/>
                 </MenuItem>
             </Menu>
             <Separator DockPanel.Dock="Top" Height="3" Margin="0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}"/>
             <DockPanel DockPanel.Dock="Top" Panel.ZIndex="9">
-                <Button x:Name="checkerbtn" Width="32" DockPanel.Dock="Right" Panel.ZIndex="2" Background="Transparent" BorderThickness="0" ToolTip="审核者已经登陆" Visibility="Collapsed">
+                <Button x:Name="checkerbtn" Padding="0" Width="28" Height="28" DockPanel.Dock="Right" Panel.ZIndex="2" Background="Transparent" BorderThickness="0" 
+                        ToolTip="审核者已经登陆" Visibility="Collapsed">
                     <Image Source="images\admin.png">
                     </Image>
                 </Button>
-                <Button x:Name="rs232disconnectedbtn" Width="32" DockPanel.Dock="Right" Panel.ZIndex="2" Background="Transparent" BorderThickness="0" ToolTip="串口未打开" Visibility="Visible" Click="rs232disconnectedbtn_Click">
-                    <Image Source="images\disconnected.png">
-                    </Image>
-                </Button>
-                <Canvas x:Name="rs232connectedBorder" Width="32" DockPanel.Dock="Right" Panel.ZIndex="9" Visibility="Hidden">
-                    <Button x:Name="rs232connectedbtn" Width="32" DockPanel.Dock="Right" Background="Transparent" BorderThickness="0" Click="rs232connectedbtn_Click" MouseEnter="rs232connectedbtn_MouseEnter" MouseLeave="rs232connectedbtn_MouseLeave">
-                        <Image Source="images\connected.png">
-                        </Image>
+                <Canvas x:Name="disconnectedcanvas" Width="28" Height="28" DockPanel.Dock="Right" Panel.ZIndex="2" >
+                    <Button x:Name="rs232disconnectedbtn" Width="28" Height="28" DockPanel.Dock="Right" Panel.ZIndex="2" Padding="0"
+                        Background="Transparent" BorderThickness="0" ToolTip="串口未打开" Visibility="Visible" Click="rs232disconnectedbtn_Click">
+                        <materialDesign:PackIcon Kind="Usb" Foreground="Black" Height="25" Width="25" Margin="3"/>
+                    </Button>
+                    <Button x:Name="rs232disconnectedbtn_1" Width="28" Height="28" DockPanel.Dock="Right" Panel.ZIndex="2" Padding="0"
+                        Background="Transparent" BorderThickness="0" ToolTip="串口未打开" Visibility="Visible" Click="rs232disconnectedbtn_Click">
+                        <materialDesign:PackIcon Kind="CloseOctagonOutline" Foreground="Red" Height="35" Width="35" Margin="-2"/>
+                    </Button>                    
+                </Canvas>
+
+                <Canvas x:Name="rs232connectedBorder" Width="32" DockPanel.Dock="Right" Panel.ZIndex="9"
+                        Visibility="Collapsed">
+                    <Button x:Name="rs232connectedbtn" Width="28" Height="28" DockPanel.Dock="Right" Background="Transparent" BorderThickness="0" Click="rs232connectedbtn_Click" MouseEnter="rs232connectedbtn_MouseEnter" 
+                            Padding="0"
+                            MouseLeave="rs232connectedbtn_MouseLeave">
+                        <materialDesign:PackIcon Kind="Usb" Foreground="Black" Height="28" Width="28"/>
                     </Button>
                     <Canvas x:Name="tipinfocanvas" Canvas.Left="-100" Canvas.Top="50" 
                             Width="100" Height="80" Background="LightBlue" Opacity="0.3"
@@ -158,32 +175,43 @@
                         <ToolBar.Background>
                             <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}"/>
                         </ToolBar.Background>
-                        <Button x:Name="clearbtn" ToolTip="开始新的测试" VerticalAlignment="Top" Height="30" Click="clearbtn_Click" IsEnabled="True">
+                        <Button x:Name="clearbtn" ToolTip="开始新的测试" VerticalAlignment="Top" Height="25" Margin="0,2,5,0"
+                                Padding="0"
+                                Click="clearbtn_Click" IsEnabled="True">
                             <Image Source="images\new.png">
-
                             </Image>
-                        </Button>                        
-                        <Button x:Name="saveallbtn" ToolTip="快速保存测试现场" VerticalAlignment="Top" Height="30" Click="saveallbtn_Click" IsEnabled="True">
+                        </Button>
+                        <Button x:Name="saveallbtn" ToolTip="快速保存测试现场" VerticalAlignment="Top" Height="25"  Margin="0,2,5,0"
+                                Padding="0"
+                                Click="saveallbtn_Click" IsEnabled="True">
                             <Image Source="images\save.png">
 
                             </Image>
                         </Button>
-                        <Button x:Name="exportExcelBtn" ToolTip="输出excel表" VerticalAlignment="Top" Height="30" Click="exportExcelBtn_Click" >
+                        <Button x:Name="exportExcelBtn" ToolTip="输出excel表" VerticalAlignment="Top" Height="25" Margin="0,2,5,0"
+                                Padding="0"
+                                Click="exportExcelBtn_Click" >
                             <Image Source="images\excel.png">
 
                             </Image>
                         </Button>
-                        <Button x:Name="exportDotsBtn" ToolTip="输出点值" VerticalAlignment="Top" Height="30" Click="exportDotsBtn_Click">
+                        <Button x:Name="exportDotsBtn" ToolTip="输出点值" VerticalAlignment="Top" Height="25" Margin="0,2,5,0"
+                                Padding="0"
+                                Click="exportDotsBtn_Click">
                             <Image Source="images\exportraw.png">
 
                             </Image>
                         </Button>
-                        <Button x:Name="commandBtn" ToolTip="命令面板" VerticalAlignment="Top" Height="30" Click="commandBtn_Click">
+                        <Button x:Name="commandBtn" ToolTip="命令面板" VerticalAlignment="Top" Height="25" Margin="0,2,5,0" 
+                                Padding="0"
+                                Click="commandBtn_Click">
                             <Image Source="images\panel.png">
 
                             </Image>
                         </Button>
-                        <Button x:Name="printRbtn" ToolTip="打印R图" VerticalAlignment="Top" Height="30" Visibility="Collapsed" Click="printRbtn_Click">
+                        <Button x:Name="printRbtn" ToolTip="打印R图" VerticalAlignment="Top" Height="25" Margin="0,2,5,0" Visibility="Collapsed" 
+                                Padding="0"
+                                Click="printRbtn_Click">
                             <Image Source="images\print.png">
 
                             </Image>
