--- a/SilverTest/SilverTest/WelcomeYou.xaml
+++ b/SilverTest/SilverTest/WelcomeYou.xaml
@@ -3,34 +3,42 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:SilverTest"
         mc:Ignorable="d"
         WindowStyle="None"
-        Title="欢迎" Height="450" Width="800" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Loaded="welecomeWindow_Loaded">
-    <Grid x:Name="grid">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="365*"/>
-            <ColumnDefinition Width="32*"/>
-        </Grid.ColumnDefinitions>
-        <GroupBox x:Name="groupBox" HorizontalAlignment="Left" Height="{Binding ActualHeight, ElementName=grid, Mode=OneWay}" Margin="0,0,0,0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" Grid.ColumnSpan="2">
-            <StackPanel HorizontalAlignment="Left" Height="{Binding ActualHeight, ElementName=groupBox, Mode=OneWay}" Margin="0,0,0,0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=groupBox, Mode=OneWay}">
-                <DockPanel Height="70" LastChildFill="False">
-                    <Label Content="苏州市青安仪器有限公司" Height="60" DockPanel.Dock="Top" FontSize="36" HorizontalAlignment="Center" FontStretch="Medium"  Foreground="Aqua"
-                           FontWeight="DemiBold" Margin="0,20,0,0">
-                    </Label>
-                </DockPanel>
-                <DockPanel Height="299" LastChildFill="False" Margin="0,0,10,0">
-                    <Image Width="300" DockPanel.Dock="Left" Source="images/zong1.bmp" Margin="50,0,0,0"></Image>
-                    <StackPanel Margin="0,50,30,50" Width="300" DockPanel.Dock="Right" >
-                        <Label Content="QM201H" FontSize="25" Margin="0,10,0,0"  FontWeight="DemiBold" />
-                        <Label Content="荧光测试仪器" FontSize="25" Margin="0,10,0,0" FontWeight="DemiBold"/>
-                        <Label Content="带蠕动泵" FontSize="25" Margin="0,10,0,0" FontWeight="DemiBold"/>
-                        <Label Content="V2.0" FontSize="25" Margin="0,10,0,0" FontWeight="DemiBold"/>
-                    </StackPanel>
-                </DockPanel>
+        Title="欢迎" Height="400" Width="600" WindowStartupLocation="CenterScreen" 
+        BorderBrush="Purple"
+        BorderThickness="1"
+        ResizeMode="NoResize" Loaded="welecomeWindow_Loaded">
+    <Window.Effect>
+        <DropShadowEffect/>
+    </Window.Effect>
+    <Grid x:Name="grid" Background="AliceBlue" >
+        <Grid.Effect>
+            <DropShadowEffect/>
+        </Grid.Effect>
+        <StackPanel Background="#FFB4DCFD">
+            <DockPanel Height="30">
+                <materialDesign:PackIcon Kind="WindowClose" Foreground="Purple" DockPanel.Dock="Right" HorizontalAlignment="Right" Margin="0,5,5,0" MouseLeftButtonDown="PackIcon_MouseLeftButtonDown"/>
+            </DockPanel>
+            
+            
+                <TextBlock VerticalAlignment="Center" Margin="0 0 0 0"
+                        FontSize="25" FontFamily="Monotype Corsiva"
+                        TextAlignment="Center"
+                        >QM201H V2.0 荧光测试仪器</TextBlock>
+            
+            
 
+            <StackPanel Height="250" Background="#FFB4DCFD" >
+                <Image Width="300" DockPanel.Dock="Left" Source="images/zong1.bmp" Margin="0,40,0,0"></Image>
             </StackPanel>
-        </GroupBox>
-
+            <TextBlock TextAlignment="Center" FontSize="25" FontFamily="STCaiyun" >带蠕动泵</TextBlock>
+            <DockPanel DockPanel.Dock="Bottom" Height="50">
+                <TextBlock DockPanel.Dock="Right" VerticalAlignment="Bottom" Margin="0,0,10,0" FontSize="15"
+                           HorizontalAlignment="Right" Foreground="Purple">苏州市青安仪器有限公司</TextBlock>
+            </DockPanel>
+        </StackPanel>
     </Grid>
 </Window>
